Lots of fixes to make this all work better.
So after previous commit, which I thought would work great, I then
attempted to move over *all* my files, and ran into some problems as
well as realized features I needed to add.

Updates README to remind people to empty Mendeley and make sure they
have no duplicate keys. Adds note that this all assumes keys are
formatted AuthorYear and has not been tested with other formats.

Changes everything so all saving and loading done explicitly with utf8
encoding. Should do so automatically but didn't seem to be working
when running lit_update or lit_add through emacs

Throughout, paths have been updated.

Files not assumed to be pdf anymore, tries to take extension.

lit_update.py:

 - Creates a backup of the literature.bib and literature.org files
   before it runs

 - Completely changed how update is run: now uses bibtexparser for the
   bib file and splits up the master_org intelligently instead of
   relying on regex to just find and replace, since I wasn't sure that
   was working correctly.

 - Adds ability to remove entry from bib and org file if its directory
   is no longer found. This makes it possible to rename something by
   renaming it, running lit_update, and then re-adding it.

lit_add.py:

 - Adds ability to catch KeyError when looking for something to put in
   publication field. Was originally being caught by the loop that
   checked for the file field.

 - Will not over-write org or bib file if they're already there.

literature.el:

 - Added testing function for if helm-bibtex doesn't load
   bibliography.

mendeley_to_org.py:

 - Added checks to make sure there aren't two entries with the same
   key.

 - Added try statements for all the bib entries. If the entries aren't
   found, add blank.

--- a/README.org
+++ b/README.org
@@ -24,9 +24,10 @@
   
   To export from mendeley to org, you will need to have a copy of
   Mendeley database (which can be found by pressing Ctrl+Shift+D in
-  Mendeley, see [[http://support.mendeley.com/customer/portal/articles/227951-how-do-i-locate-mendeley-desktop-database-files-on-my-computer-][here]] for details) and a bibtex file (exported from
-  Mendeley, select all files and press Ctrl+e) with all the files you
-  want to move over. It's recommended that you use a copy of your
+  Mendeley, see [[http://support.mendeley.com/customer/portal/articles/227951-how-do-i-locate-mendeley-desktop-database-files-on-my-computer-][here]] for details -- make sure your trash is empty
+  first and you have no duplicate keys) and a bibtex file (exported
+  from Mendeley, select all files and press Ctrl+e) with all the files
+  you want to move over. It's recommended that you use a copy of your
   Mendeley database, not the original. Only the files contained within
   your bibtex file will be moved, so if you want to test this, don't
   include all files in it.
@@ -38,6 +39,12 @@
   option for Mendeley, required for mendeley_to_org to find it) into
   Unsorted within your paper_dir (as set in lit_add.py). As far as I'm
   aware, Mendeley does not allow for bulk export.
+
+  *NOTE*: This should just take the bibtex key that you had it saved
+  with in Mendeley, but I assume all keys are "AuthorYear"; new keys
+  are created as such in lit_add.py and that's the assumption
+  everywhere, so if you want to use a different key format, this might
+  not work.
   
 * Usage
 
