Small updates to get this working better.
Updates paper_dir to use the tilde for home directory, changes
lit_add, lit_update, mendeley_to_org so they use os.path.expanduser to
reflect this.

Realized that "python script.py" doesn't use the Anaconda version of
python from inside emacs, so changed that python explicitly to the
Anaconda version. I don't know of a way to have emacs check if things
are working, so that will just need to be manually set by the
user. Added something to README.org to reflect this.

Also found a way to have helm-bibtex use the system default
application to open pdfs instead of relying on emacs.

--- a/README.org
+++ b/README.org
@@ -20,7 +20,10 @@
   variables at the top of mendeley_to_org and lit_add.py
   
   Additionally, if you want to use emacs (see [[*Set-up in Emacs][Set-up in Emacs]]), you
-  will need to change the paths in literature.el
+  will need to change the paths in literature.el. You may need to
+  change the python call to where your python, depending on your
+  python setup (if you use anaconda, you'll likely have to change it
+  from =python= to =~/anaconda/bin/python=)
   
   To export from mendeley to org, you will need to have a copy of
   Mendeley database (which can be found by pressing Ctrl+Shift+D in
