Changes all paths from absolute (with tilde) to relative, so that this is now Android-compatible (through RefMaster)
Changes how paths are handled by lit_add, lit_update, mendeley_to_org
so that they're always relative. This means that local and master org
and bib files need to have different strings, which they accomplish by
editing them after they get loaded in.

Also, incuded temporary function lit_update.scratch, which I used to
update all already-existing files.

Should work with non-pdfs, but haven't tested. Crossref search also
doesn't seem to be working right now, so was unable to test adding a
pdf directly.

--- a/README.org
+++ b/README.org
@@ -101,6 +101,12 @@
   Unfortunately, looks like the input gets immediately removed, so
   you'll need to head to ~*Messages*~ buffer to view the results of it.
 
+* Android set-up
+  
+  This should work right out of the box with RefMaster; just link it
+  to your dropbox, load in your literature.bib file, and you should be
+  good to go!
+  
 * Acknowledgments
 
   I spent a lot of time reading around on the internet before deciding
