Updates for new version of dependencies
My org-ref dependency has changed how it references some of its
sub-functions (from jmax-bibtex to org-ref-bibtex, from pubmed to
org-ref-pubmed, etc.) and so need to update the require commands here to
make them work.

Also add bit to the README about required emacs packages

--- a/README.org
+++ b/README.org
@@ -16,6 +16,16 @@
    - python-poppler
    - git
 
+** Emacs
+
+   If you're going to use this with Emacs, you'll need the following
+   emacs packages (all can be installed from MELPA)
+
+   - bibtex-utils
+   - org-ref
+   - helm-bibtex
+   - biblio
+
 * Set-up
 
   Clone this directory somewhere in your machine and set the global
